tests/positive/Internal/Box.juvix
module Box;

type Box (A : Type) := box : A → Box A;

open Box using {box} public;

type T := t : T;

open T using {t} public;

b : Box _ := box t;

id : {A : Type} → A → A
  | x := x;

tt : _ := id t;
